fixed dark mode issue

--- a/css/style.css
+++ b/css/style.css
@@ -691,3 +691,15 @@ article p {
         background-color: #434343;
     }
 }
+
+/* for iPad dark mode */
+@media screen and (min-width: 769px) and (max-width: 960px) and (prefers-color-scheme: dark) {
+    .social {
+        background-color: #2B2B2B;
+    }
+
+    .social-a,
+    .social-b {
+        background-color: #1C1C1C;
+    }
+}
